[package]
name = "raspilib"
version = "0.1.0"
edition = "2018"
authors = ["Franklynn0492 <franklynn@posteo.de>"]
description = "Rust library to make easier use af Raspberry Pi features. Also a learning project for myself and anyone who wants to use it :)"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = "0.4.1"              # Handles basic GPIO operations
strum_macros = "0.23"       # Helpful macros for working with enums and strings
strum = "0.23"              # Helpful macros for working with enums and strings