[package]
name = "raspilib"
version = "0.1.0"
edition = "2021"
authors = ["Franklynn0492 <franklynn@posteo.de>"]
description = "Rust library to make easier use af Raspberry Pi features. Also a learning project for myself and anyone who wants to use it :)"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = "0.4.1"              # Handles basic GPIO operations
strum_macros = "0.24.0"     # Helpful macros for working with enums and strings
strum = "0.24.0"            # Helpful macros for working with enums and strings
lazy_static = "1.4.0"       # Allows lazy instantiation of global state
enumset = "1.0.11"          # allows usages of - well, EnumSets
enum-map = "2.4.1"          # allows usages of EnumMaps